# RxnFlow

./: .gitignore  LICENSE  README.md  download.sh  env.yml  example-qed.csv  example-qed.smi  pyproject.toml  requirements.txt  setup.py
data/: README.md
data/experiments/: README.md
data/scripts/: _a_refine.py  _b_smi_to_env.py  a_enamine_catalog_to_smi.py  a_refine_smi.py  a_sdf_to_env.py  b1_sdf_to_smi.py  b2_smi_to_env.py  b_create_env.py  c_subsample_env.py  create_env.py  d_create_crossdocked_db.py  subsample.py  z1_paper_subsample.py  z2_paper_create_toy.py
data/templates/: real.txt  real_raw.txt
examples/: opt_qed.py  sampling_qed.py  sampling_qed_advanced.py
experiments/exp-sweeps/: exp2_zeroshot.yaml  exp4_generalization.yaml  exp5_ablation.yaml  expD1_theoretical.yaml
experiments/exp-sweeps/exp1_singleopt/: a0_frag.yaml  a1_frag_sa.yaml  b_rxnflow.yaml  c_rgfn.yaml  d_synflownet.yaml
experiments/scripts/: A1_opt_litpcba.py  A_opt_litpcba.py  B1_train_pocket_conditional.py  B2_extract_topk.py  B2_test_crossdocked2020.py  C1_train_pocket_conditional.py  C2_test_crossdocked2020.py  _exp1_constant.py  _exp2_constant.py  exp1_singleopt.py  exp2_zero_shot.py  exp4_qed_opt.py  exp5_ablation.py  expD1_theoretical.py  test2_crossdocked.py  test3_lowtpsa_kras.py  test4_generalization_qed.py
experiments/sweep/: benchmark.yaml  benchmark_fraggfn.yaml
notebook/: check_iupac(pubchem).ipynb  check_iupac(stout).ipynb  check_npy.ipynb  chemllm.ipynb
script/: opt_qed.py  opt_unidock.py  opt_unidock_moo.py  pretrain_qed.py  sampling_unidock.py  sampling_zeroshot.py  train_pocket_conditional.py  utils.py
scripts/: _utils.py  few_shot_unidock_moo.py  opt_seh.py  opt_unidock.py  opt_unidock_mogfn.py  opt_unidock_moo.py  pretrain_qed.py  sampling_unidock.py  sampling_zeroshot.py  train_pocket_conditional.py
scripts/examples/: opt_mogfn.py  opt_qed.py  sampling_qed.py  sampling_qed_advanced.py
src/gflownet/: astb_online_trainer.py  astb_trainer.py  config.py  online_trainer.py  trainer.py
src/gflownet/algo/: astb_synthesis.py  config.py  synthesis_sampling.py  trajectory_balance.py  trajectory_balance_synthesis.py
src/gflownet/base/: __init__.py  base_generator.py  base_task.py  base_trainer.py
src/gflownet/data/: sampling_iterator.py
src/gflownet/envs/synthesis/: __init__.py  action.py  action_categorical.py  action_sampling.py  env.py  env_context.py  reaction.py  retrosynthesis.py  utils.py
src/gflownet/misc/: chem_metrics.py
src/gflownet/misc/rgfn/: __init__.py  action_categorical.py  env_context.py  gfn.py  unidock_trainer.py
src/gflownet/misc/synflownet/: __init__.py  env.py  gfn.py  reaction_sampling.py  trajectory_balance.py  unidock_trainer.py  utils.py
src/gflownet/misc/toy/: algo.py
src/gflownet/misc/unidock/: scoring.py
src/gflownet/models/: astb_gfn.py  config.py  graph_transformer.py  synthesis_gfn.py
src/gflownet/sbdd/: algo.py  model.py  reward_function.py  task.py
src/gflownet/tasks/: analysis_qed.py  analysis_toy.py  config.py  sbdd_synthesis.py  seh_frag_moo.py  seh_synthesis.py  unidock_moo_frag.py  unidock_moo_synthesis.py  unidock_task.py
src/gflownet/utils/: misc.py
src/rxnflow/: config.py
src/rxnflow/algo/: config.py  synthetic_path_sampling.py  trajectory_balance.py
src/rxnflow/appl/pocket_conditional/: algo.py  data_source.py  model.py  reward_function.py  trainer.py  utils.py
src/rxnflow/appl/pocket_conditional/pocket/: data.py  gvp.py
src/rxnflow/base/: __init__.py  generator.py  task.py  trainer.py
src/rxnflow/base/gflownet/: online_trainer.py  sqlite_log.py  trajectory_balance.py
src/rxnflow/envs/: __init__.py  action.py  building_block.py  env.py  env_context.py  reaction.py  retrosynthesis.py
src/rxnflow/models/: config.py  gfn.py
src/rxnflow/policy/: action_categorical.py  action_space_subsampling.py
src/rxnflow/tasks/: config.py  multi_pocket.py  qed.py  seh.py  seh_moo.py  unidock.py  unidock_moo.py  unidock_vina.py  unidock_vina_fewshot.py  unidock_vina_mogfn.py  unidock_vina_moo.py
src/rxnflow/tasks/utils/: chem_metrics.py  unidock.py
src/rxnflow/utils/: chem_metrics.py  download.py  misc.py
src/vectordb/: manager.py
weights/: README.md
